fix overflow issue on mobile,and pics on mobile

--- a/styles/abstracts/_variables.scss
+++ b/styles/abstracts/_variables.scss
@@ -1,7 +1,7 @@
 $large-screen: 1486px;
 $medium-screen: 1186px;
 $small-screen: 768px;
-$ultra-small-screen: 468px;
+$ultra-small-screen: 500px;
 
 
 :root {
