--- a/styles/base/_base.scss
+++ b/styles/base/_base.scss
@@ -52,6 +52,10 @@ body {
     &::-webkit-scrollbar {           
         width: 0 !important    
     } 
+
+    @media only screen and (max-width: $ultra-small-screen) {
+        overflow: initial !important;
+    }
 }
 
 
