--- a/styles/components/pages/index/hero/_hero.scss
+++ b/styles/components/pages/index/hero/_hero.scss
@@ -6,7 +6,7 @@
 
   .hero_container {
     width: 100%;
-    height: 100vh;
+    // height: 100vh;
     position: relative;
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -58,7 +58,7 @@
       overflow: hidden;
       //   width: 100vw;
       z-index: 1;
-      height: 100vh;
+    //   height: 100vh;
 
       video {
         // z-index: -1;
@@ -78,21 +78,6 @@
   }
 }
 
-@media only screen and (max-width: $large-screen) {
-    .hero {
-    
-        .hero_container {
-    
-          .intro_video {
-    
-            video {
-                transform: translateX(-50%) translateY(-50%);
-            }
-          }
-        }
-    }
-}
-
 
 @media only screen and (max-width: $medium-screen) {
   .hero {
@@ -106,7 +91,7 @@
 
       .intro_video {
         grid-row: 1/2;
-        height: 64.5vh;
+        // height: 64.5vh;
         border-radius: 0 0 30px 30px;
 
         video {
